--- a/guns-admin/src/main/webapp/WEB-INF/view/personnel/personnelInfo/personnelInfo_add.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/personnel/personnelInfo/personnelInfo_add.html
@@ -20,7 +20,7 @@
                             <#input id="education" name="受教育程度" underline="true"/>
                             <#input id="political" name="政治面貌" underline="true"/>
                             <#input id="householdType" name="户籍类别" underline="true"/>
-                            <#select id="marriage" name="婚姻状况" underline="true">
+                            <#select id="marriage" name="婚姻状况" underline="true" class=".js-example-basic-single">
                                 <option value="0">未婚</option>
                                 <option value="1">已婚</option>
                                 <option value="2">再婚</option>
