--- a/guns-admin/src/main/webapp/WEB-INF/view/common/_container.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/common/_container.html
@@ -19,6 +19,7 @@
     <link href="${ctxPath}/static/css/plugins/ztree/zTreeStyle.css" rel="stylesheet">
     <link href="${ctxPath}/static/css/plugins/jquery-treegrid/css/jquery.treegrid.css" rel="stylesheet"/>
     <!-- <link href="${ctxPath}/static/css/plugins/ztree/demo.css" rel="stylesheet"> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
 
     <!-- 全局js -->
     <script src="${ctxPath}/static/js/jquery.min.js?v=2.1.4"></script>
@@ -42,7 +43,7 @@
     <script src="${ctxPath}/static/js/common/web-upload-object.js"></script>
     <script src="${ctxPath}/static/js/common/ztree-object.js"></script>
     <script src="${ctxPath}/static/js/common/Feng.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
     <script type="text/javascript">
         Feng.addCtx("${ctxPath}");
