--- a/guns-admin/src/main/webapp/WEB-INF/view/usermanager/userInfo/userInfo_edit.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/usermanager/userInfo/userInfo_edit.html
@@ -4,22 +4,24 @@
         <div class="form-horizontal">
 
             <input type="hidden" id="id" value="${item.id}">
-
+            <input type="hidden" id="statusValue" value="${item.status}">
             <div class="row">
                 <div class="col-sm-6 b-r">
-                            <#input id="id" name="" value="${item.id}" underline="true"/>
-                            <#input id="userName" name="用户名" value="${item.userName}" underline="true"/>
-                            <#input id="phone" name="手机号" value="${item.phone}" underline="true"/>
-                            <#input id="appid" name="应用id" value="${item.appid}" underline="true"/>
-                            <#input id="token" name="用户登录token" value="${item.token}" />
+                    <#input id="userName" name="用户名" value="${item.userName}" underline="true"/>
+                    <#input id="phone" name="手机号" value="${item.phone}" underline="true"/>
+                    <#input id="appid" name="应用id" value="${item.appid}" underline="true"/>
+
                 </div>
 
                 <div class="col-sm-6">
-                            <#input id="accessCount" name="成功访问数量" value="${item.accessCount}" underline="true"/>
-                            <#input id="failCount" name="失败访问次数" value="${item.failCount}" underline="true"/>
-                            <#input id="status" name="状态 0 正常 1 暂停 2 删除" value="${item.status}" underline="true"/>
-                            <#input id="createUser" name="创建人" value="${item.createUser}" underline="true"/>
-                            <#input id="createTime" name="创建时间" value="${item.createTime}" />
+                    <#input id="userKey" name="用户userKey" value="${item.userKey}" />
+                    <!--<#input id="accessCount" name="成功访问数量" value="${item.accessCount}" underline="true"/>-->
+                    <!--<#input id="failCount" name="失败访问次数" value="${item.failCount}" underline="true"/>-->
+                    <#select id="status" name="状态" underline="true">
+                        <option value="0">正常</option>
+                        <option value="1">暂停</option>
+                        <option value="2">删除</option>
+                    </#select>
                 </div>
             </div>
 
