--- a/guns-admin/src/main/webapp/WEB-INF/view/usermanager/userInfo/userInfo.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/usermanager/userInfo/userInfo.html
@@ -10,7 +10,7 @@
                     <div class="col-sm-12">
                         <div class="row">
                             <div class="col-sm-3">
-                                <#NameCon id="condition" name="名称" />
+                                <#NameCon id="condition" name="名称" placeholder="名称/手机号/appid"/>
                             </div>
                             <div class="col-sm-3">
                                 <#button name="搜索" icon="fa-search" clickFun="UserInfo.search()"/>
