--- a/guns-admin/src/main/webapp/WEB-INF/view/usermanager/userInfo/userInfo_add.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/usermanager/userInfo/userInfo_add.html
@@ -3,8 +3,6 @@
     <div class="ibox-content">
         <div class="form-horizontal" id="userInfoForm">
 
-            <input type="hidden" id="id" value="">
-
             <div class="row">
                 <div class="col-sm-6 b-r">
                     <#input id="userName" name="用户名称" underline="true"/>
@@ -14,7 +12,7 @@
                 <div class="col-sm-6">
                     <#input id="appid" name="应用id" underline="true"/>
                     <#select id="status" name="状态" underline="true">
-                        <option value="0">正常</option>
+                        <option value="0" selected >正常</option>
                         <option value="1">暂停</option>
                         <option value="2">删除</option>
                     </#select>
