--- a/guns-admin/src/main/webapp/WEB-INF/view/usermanager/userInfo/userInfo_edit.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/usermanager/userInfo/userInfo_edit.html
@@ -1,7 +1,7 @@
 @layout("/common/_container.html"){
 <div class="ibox float-e-margins">
     <div class="ibox-content">
-        <div class="form-horizontal">
+        <div class="form-horizontal" id="userInfoFormEdit">
 
             <input type="hidden" id="id" value="${item.id}">
             <input type="hidden" id="statusValue" value="${item.status}">
