--- a/guns-admin/src/main/webapp/WEB-INF/view/queryLog/queryLogInfo/queryLogInfo.html
+++ b/guns-admin/src/main/webapp/WEB-INF/view/queryLog/queryLogInfo/queryLogInfo.html
@@ -10,22 +10,20 @@
                     <div class="col-sm-12">
                         <div class="row">
                             <div class="col-sm-3">
-                                <#NameCon id="condition" name="名称" />
+                                <#NameCon id="condition" name="名称" placeholder="appid/ip/订单号"/>
+                            </div>
+                            <div class="col-sm-3">
+                                <#TimeCon id="beginTime" name="日志开始日期" isTime="true" pattern="YYYY-MM-DD hh:mm:ss"/>
+                            </div>
+                            <div class="col-sm-3">
+                                <#TimeCon id="endTime" name="日志结束日期" isTime="true" pattern="YYYY-MM-DD hh:mm:ss"/>
                             </div>
                             <div class="col-sm-3">
                                 <#button name="搜索" icon="fa-search" clickFun="QueryLogInfo.search()"/>
                             </div>
                         </div>
                         <div class="hidden-xs" id="QueryLogInfoTableToolbar" role="group">
-                            @if(shiro.hasPermission("/queryLogInfo/add")){
-                                <#button name="添加" icon="fa-plus" clickFun="QueryLogInfo.openAddQueryLogInfo()"/>
-                            @}
-                            @if(shiro.hasPermission("/queryLogInfo/update")){
-                                <#button name="修改" icon="fa-plus" clickFun="QueryLogInfo.openQueryLogInfoDetail()" space="true"/>
-                            @}
-                            @if(shiro.hasPermission("/queryLogInfo/delete")){
-                                <#button name="删除" icon="fa-plus" clickFun="QueryLogInfo.delete()" space="true"/>
-                            @}
+
                         </div>
                         <#table id="QueryLogInfoTable"/>
                     </div>
